--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,56 @@
 .App {
   text-align: center;
+  background-color: black;
+  color: white;
+}
+
+button {
+  background-color: blue;
+  color: white;
+  padding: 20px;
+  margin: 20px;
+  font-size: 25px;
+  border-radius: 10px;
+  border: none;
+  cursor: pointer;
+}
+
+h1 {
+  margin-top: 20px;
+  color: white;
+  font-size: 50px;
+}
+
+.cards {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.card {
+  width: 250px;
+  border: 1px solid lightgray;
+  border-radius: 10px;
+  margin: 20px;
+  padding-bottom: 10px;
+}
+
+.card > img {
+  width: 100%;
+  border-radius: 10px;
+}
+
+form {
+  font-size: 30px;
+}
+
+input {
+  font-size: 20px;
+  margin: 15px;
+  padding: 10px;
+}
+
+label {
+  display: block;
 }
