--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
   color: white;
 }
 
-button {
+/* button {
   background-color: blue;
   color: white;
   padding: 20px;
@@ -53,4 +53,4 @@ input {
 
 label {
   display: block;
-}
+} */
