--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,11 @@
   margin: 0 auto;
 }
 
+.active {
+  color: blue;
+  text-decoration: none;
+}
+
 h1 {
   font-size: 2.2rem;
   margin-bottom: 40px;
@@ -25,54 +30,3 @@ nav {
 nav a {
   margin: 15px;
 }
-
-/* button {
-  background-color: blue;
-  color: white;
-  padding: 20px;
-  margin: 20px;
-  font-size: 25px;
-  border-radius: 10px;
-  border: none;
-  cursor: pointer;
-}
-
-h1 {
-  margin-top: 20px;
-  color: white;
-  font-size: 50px;
-}
-
-.cards {
-  display: flex;
-  flex-wrap: wrap;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.card {
-  width: 250px;
-  border: 1px solid lightgray;
-  border-radius: 10px;
-  margin: 25px;
-  padding-bottom: 15px;
-}
-
-.card > img {
-  width: 100%;
-  border-radius: 10px;
-}
-
-form {
-  font-size: 30px;
-}
-
-input {
-  font-size: 20px;
-  margin: 15px;
-  padding: 10px;
-}
-
-label {
-  display: block;
-} */
