ADD: Relative links

--- a/src/App.css
+++ b/src/App.css
@@ -7,10 +7,19 @@
 }
 
 /* Use by defaul with NavLinl*/
-/* .active {
+.active {
   color: blue;
   text-decoration: none;
-} */
+}
+
+.courseLink {
+  font-size: 25px;
+  text-decoration: none;
+}
+
+.courseLink:hover {
+  text-decoration: underline;
+}
 
 .activeLink {
   color: blue;
